# boot-6502

./: .gitignore  .gitmodules  Cargo.toml  README.md  avr-unknown-gnu-atmega2560.json  run_tests.ps1  runner.sh
.cargo/: config
.github/workflows/: rust.yml
6502/: Makefile  Session.vim  acia.inc  acia.s  base.s  comms.s  compile.sh  constants.s  debug.inc  debug.s  dummy.s  error.inc  error.s  firmware.cfg  lcd.inc  lcd.s  memory.inc  memory.s  memory_map.s  peripherals.s  rpi_io.s  selfcontained_test.s  stack.inc  stack.s  via.inc  via.s  zeropage.inc  zeropage.s
6502/standalone/: acia_echo.s
boot/: Cargo.toml
boot/src/: lib.rs
boot/src/protocol/: mod.rs  parallel.rs  serial.rs
crates/boot-6502/: Cargo.toml
crates/emu-6502/: Cargo.toml  build.rs  wrapper.h
crates/emu-6502/src/: lib.rs  sys.rs
crates/fake-6502/: Cargo.toml  build.rs
crates/fake-6502/src/: lib.rs
crates/utils/: Cargo.toml  build.rs
crates/utils/src/: lib.rs  vasm.rs
lib-gpio/: Cargo.toml
lib-gpio-real/: Cargo.toml
lib-gpio-real/src/: lib.rs
lib-gpio/src/: lib.rs
lib-io/: Cargo.toml
lib-io-avr/: Cargo.toml
lib-io-avr/src/: lib.rs
lib-io-rpi/: Cargo.toml
lib-io-rpi/src/: lib.rs  pins.rs
lib-io-rpi/src/pins/: generator_macros.rs  mod.rs
lib-io/src/: impl_avr.rs  lib.rs
src/: lib.rs  main.rs  serial.rs
tests/: jsr.rs  sfota_basic.rs  should_connect.rs  write_read.rs
