[workspace]

members = [
    "crates/boot-6502",
    "crates/emu-6502",
    "crates/utils",
]

[profile.release]
lto = "thin"

[profile.perf]
inherits = "release"
debug = true

[profile.dev]
opt-level = 1

[profile.bench]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = true
