[package]
name = "lib-gpio-real"
version = "0.1.0"
authors = ["Dragnmn <dragnmn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-gpio = { path = "../lib-gpio" }
gpio-cdev = "0.4.0"
thiserror = "1.0.20"
