[package]
name = "lib-io"
version = "0.1.0"
authors = ["Tim Evers <29369097+TVerse@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arduino-mega2560 = { git = "https://github.com/Rahix/avr-hal", rev = "0c6cf16" }
atmega2560-hal = { git = "https://github.com/Rahix/avr-hal", rev = "0c6cf16" }
avr-hal-generic = { git = "https://github.com/Rahix/avr-hal", rev = "0c6cf16" }